<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="item"
            type="com.example.testandroid.data.entites.Person" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/global_card_view"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/margin_10dp"
            app:cardCornerRadius="@dimen/margin_12dp"
            app:cardElevation="@dimen/margin_4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/global_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/header_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/firstname_label_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:padding="@dimen/margin_3dp"
                        android:singleLine="true"
                        android:text="@string/firstname_label"
                        android:textColor="@color/color_blue_3"
                        android:textSize="@dimen/font_14"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/firstname_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/margin_3dp"
                        android:singleLine="true"
                        android:text="@string/firstname"
                        android:textColor="@color/color_blue_3"
                        android:textSize="@dimen/font_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_3dp">

                    <TextView
                        android:id="@+id/lastname_label_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:padding="@dimen/margin_3dp"
                        android:singleLine="true"
                        android:text="@string/lastname_label"
                        android:textColor="@color/color_blue_3"
                        android:textSize="@dimen/font_14"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lastname_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/margin_3dp"
                        android:text="@string/lastname"
                        android:textColor="@color/color_blue_3"
                        android:textSize="@dimen/font_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_3dp">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_3dp"
                        android:layout_weight="0.7">

                        <TextView
                            android:id="@+id/birthday_label_txt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:padding="@dimen/margin_3dp"
                            android:singleLine="true"
                            android:text="@string/birthday_label"
                            android:textColor="@color/color_blue_3"
                            android:textSize="@dimen/font_14"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/birthday_txt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:padding="@dimen/margin_3dp"
                            android:singleLine="true"
                            android:text="@string/birthday"
                            android:textColor="@color/color_blue_3"
                            android:textSize="@dimen/font_14" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
