<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.testandroid.presentation.ui.mainActivity.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.mainActivity.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_60dp"
            android:background="@drawable/background_toolbar"
            android:padding="@dimen/padding_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_first_constraint"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/create_person"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_add_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_checked_symbol"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_information"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_title">

            <ScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <LinearLayout
                        android:id="@+id/firstname_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:background="@drawable/customer_gray_btn"
                        android:elevation="@dimen/margin_5dp"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/firstname_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_2dp"
                            android:layout_weight="0.3"
                            android:padding="@dimen/margin_8dp"
                            android:singleLine="true"
                            android:text="@string/firstname"
                            android:textColor="@color/color_blue_3"
                            android:textSize="@dimen/font_12" />

                        <EditText
                            android:id="@+id/firstname_et"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_2dp"
                            android:layout_weight="1"
                            android:background="@drawable/custom_background_choose_country"
                            android:hint="@string/firstname"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:padding="@dimen/margin_8dp"
                            android:singleLine="true"
                            android:textAlignment="center"
                            android:textColor="@color/color_blue_3"
                            android:textColorHint="@color/color_gray_3"
                            android:textSize="@dimen/font_12" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lastname_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:background="@drawable/customer_gray_btn"
                        android:elevation="@dimen/margin_5dp"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/firstname_linear">

                        <TextView
                            android:id="@+id/lastname_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_2dp"
                            android:layout_weight="0.3"
                            android:padding="@dimen/margin_8dp"
                            android:singleLine="true"
                            android:text="@string/lastname"
                            android:textColor="@color/color_blue_3"
                            android:textSize="@dimen/font_12" />

                        <EditText
                            android:id="@+id/lastname_et"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_2dp"
                            android:layout_weight="1"
                            android:background="@drawable/custom_background_choose_country"
                            android:hint="@string/lastname"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:padding="@dimen/margin_8dp"
                            android:singleLine="true"
                            android:textAlignment="center"
                            android:textColor="@color/color_blue_3"
                            android:textColorHint="@color/color_gray_3"
                            android:textSize="@dimen/font_12" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/birthday_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:background="@drawable/customer_gray_btn"
                        android:elevation="@dimen/margin_5dp"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lastname_linear">

                        <TextView
                            android:id="@+id/birthday_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_2dp"
                            android:layout_weight="0.3"
                            android:padding="@dimen/margin_8dp"
                            android:text="@string/birthday"
                            android:textColor="@color/color_blue_3"
                            android:textSize="@dimen/font_12" />

                        <TextView
                            android:id="@+id/birthday_et"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_2dp"
                            android:layout_weight="1"
                            android:background="@drawable/custom_background_choose_country"
                            android:enabled="false"
                            android:hint="@string/birthday"
                            android:drawableEnd="@drawable/ic_calendar"
                            android:padding="@dimen/margin_8dp"
                            android:textAlignment="center"
                            android:textColor="@color/color_blue_3"
                            android:textColorHint="@color/color_gray_3"
                            android:textSize="@dimen/font_12" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_up"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/shap_background_toolbar"
                app:layout_constraintBottom_toTopOf="@+id/view_const"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_const"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F2F4F3"
                android:elevation="@dimen/margin_2dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_persons"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/margin_10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
